--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
     <properties>
         <java.version>25</java.version>
         <vaadin.version>25.0.5</vaadin.version>
+
+        <!-- Dependencies -->
+        <jackson.version>2.21.0</jackson.version>
+        <jackson.annotations.version>2.21</jackson.annotations.version>
+
     </properties>
     
     <parent>
@@ -54,6 +59,26 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+
+
+        <!-- JSON Parsing -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.annotations.version}</version>
+        </dependency>
+
+        <!-- Test Dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
