--- a/.github/workflows/create-summary.yml
+++ b/.github/workflows/create-summary.yml
@@ -32,7 +32,7 @@ jobs:
           cache: "maven"
 
       - name: Set up jbang
-        uses: jbangdev/setup-jbang@v2
+        uses: jbangdev/setup-jbang@main
 
       - name: Generate summary.json
         run: jbang SummarizeReports.java
